[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osm-login-python"
version = "1.0.0"
description = "Use OSM Token exchange with OAuth2.0 for python projects"
readme = "README.md"
authors = [{name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"}]
license = {text = "BSD-3-Clause"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
